# loraham-pi-control

./: .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.md  bootstrap-deps.sh  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
config/: README.md  local.example.toml  manifest.example.toml
deploy/: lhpc-nginx-restart.path  lhpc-nginx-restart.service  lhpc-nginx.service  lhpc-selfupdate-overwrite.service  lhpc-selfupdate.path  lhpc-selfupdate.service  lhpc-web.service
docs/: README.md  adding-a-stack.md  architecture.md  cli.md  deployment-migration.md  deployment.md  field-notes.md  firewall.md  hardening-0.1.md  live-test-2026-07-14.md  operations.md  provenance.md  webserver.md  wifi-access-point.md
docs/stacks/: aprs.md  daemon.md  kiss.md  meshcom.md  meshcore.md  meshtastic.md  voice.md
lhpc/: __init__.py  __main__.py  version.py
lhpc/adapters/: __init__.py
lhpc/adapters/cli/: main.py
lhpc/adapters/web/: __init__.py  app.py
lhpc/adapters/web/static/: auto_install.js  bandfilter.js  bulk.js  copy.js  daemoncfg.js  dash.js  dparams.js  flash.js  hmac.js  logs.js  schemeauth.js  stacklazy.js  stackparams.js  stacks_state.js  style.css  taskbanner.js  theme.js
lhpc/adapters/web/templates/: _component_card.html  _daemon_params.html  _macros.html  _stack_body.html  _stack_params.html  _stack_settings.html  _stackweb.html  _task_banner.html  _update.html  _webserver.html  auto_install.html  auto_install_confirm.html  base.html  config.html  config_index.html  confirm.html  confirm_radio.html  controller_logs.html  dashboard.html  dependencies.html  error.html  hmac_apply.html  install_all.html  install_all_confirm.html  logs.html  self_update.html  stack.html  stacks.html  updating.html  webserver_logs.html
lhpc/core/: __init__.py  abortflag.py  assets.py  auto_install.py  build_launcher_runtime.py  bulk.py  commands.py  config.py  daemon_control.py  daemon_params.py  deps.py  install.py  jobresult.py  jobs.py  known_working.py  lifecycle.py  manifest.py  model.py  outcomes.py  paths.py  pki.py  procident.py  proctree.py  profiles.py  provenance.py  reslock.py  resources.py  runtime_fs.py  sdnotify.py  selfupdate.py  service_auto_install.py  service_base.py  service_bulk.py  service_hmac.py  service_lifecycle_ops.py  service_maintenance.py  service_params.py  service_selfupdate.py  service_webserver.py  services.py  (+10 more)
lhpc/core/probes/: __init__.py  backends.py  endpoints.py  hardware.py  net.py  process.py  source.py  systemd.py  unixsock.py
lhpc/data/: defaults.toml  local.example.toml  manifest.example.toml  profiles.example.toml  secrets.example.toml
lhpc/data/bases/: meshtasticd.yaml
lhpc/data/scripts/: meshtastic-link-gate.sh  meshtastic-web-assets.sh
tests/: README.md  conftest.py  htmlq.py  test_abortflag.py  test_admission_holes.py  test_auto_install.py  test_bootstrap_deps.py  test_bounded_runner.py  test_build_launcher_runtime.py  test_build_timeout.py  test_clean.py  test_cli.py  test_config.py  test_config_bundle.py  test_config_containment.py  test_config_failclosed.py  test_config_safety.py  test_config_stable.py  test_config_typed.py  test_containment.py  test_controller.py  test_daemon_bounds.py  test_daemon_control.py  test_daemon_params.py  test_daemon_params_web.py  test_daemon_readiness.py  test_daemon_setting_bounds.py  test_dependency_overview.py  test_deploy_scripts.py  test_deployment.py  test_deps.py  test_endpoint_family.py  test_form_accessibility.py  test_group_requirement.py  test_hardware.py  test_hmac.py  test_hmac_runner.py  test_install.py  test_install_all.py  test_install_dep_gate.py  (+92 more)
tests/fixtures/: nginx-auth-everywhere.conf  nginx-exposed.conf  nginx-local-open-remote-auth.conf  nginx-no-auth.conf
tools/: manifest_pin.py  rig_supervisor.py
tools/rig-runs/2026-07-21T051858Z/: run-report.md
tools/rig-runs/2026-07-21T051858Z/evidence-meshcom-qemu-1/: bundle.txt
tools/rig-runs/2026-07-21T051858Z/meshtastic-harvest/: harvest.txt
