[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loraham-pi-control"
version = "0.1.4"
description = "Terminal-first and web-enabled installer/updater/configurator/orchestrator for LoRaHAM Pi stacks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Johannes Loose (DJ0CHE)", email = "410733@gmail.com" }]

# The CLI and probe core use only the standard library (argparse, tomllib,
# subprocess, socket). The local web console uses Flask with server-rendered
# Jinja templates — a small, dependency-light foundation (no SPA, no Node).
dependencies = [
    "flask>=3,<4",
    # Werkzeug ships with Flask; pin the floor that introduced strict Host parsing so the
    # illegal-Host contract (test_illegal_host_header_is_safe_200_or_400) is well-defined.
    "werkzeug>=3.1",
    # Productive WSGI server (mandatory — the web console must not fall back to
    # Flask's development server for productive serving).
    "waitress>=3,<4",
    # Local PKI: X.509 CA/leaf certificates, PKCS#12 client bundles, and CRLs are
    # generated with this well-maintained library — never by building OpenSSL shell
    # command strings for security-sensitive material.
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
lhpc = "lhpc.adapters.cli.main:main"

[tool.setuptools]
packages = [
    "lhpc",
    "lhpc.core",
    "lhpc.core.probes",
    "lhpc.adapters",
    "lhpc.adapters.cli",
    "lhpc.adapters.web",
]

[tool.setuptools.package-data]
"lhpc" = ["data/*.toml"]
"lhpc.adapters.web" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
