[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loraham-pi-control"
version = "0.1.4"
description = "Terminal-first and web-enabled installer/updater/configurator/orchestrator for LoRaHAM Pi stacks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Johannes Loose (DJ0CHE)", email = "410733@gmail.com" }]

# The CLI and probe core use only the standard library (argparse, tomllib,
# subprocess, socket). The local web console uses Flask with server-rendered
# Jinja templates — a small, dependency-light foundation (no SPA, no Node).
dependencies = [
    "flask>=3,<4",
    # Werkzeug ships with Flask; pin the floor that introduced strict Host parsing so the
    # illegal-Host contract (test_illegal_host_header_is_safe_200_or_400) is well-defined.
    "werkzeug>=3.1",
    # Productive WSGI server (mandatory — the web console must not fall back to
    # Flask's development server for productive serving).
    "waitress>=3,<4",
    # Local PKI: X.509 CA/leaf certificates, PKCS#12 client bundles, and CRLs are
    # generated with this well-maintained library — never by building OpenSSL shell
    # command strings for security-sensitive material.
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
lhpc = "lhpc.adapters.cli.main:main"

[tool.setuptools]
packages = [
    "lhpc",
    "lhpc.core",
    "lhpc.core.probes",
    "lhpc.adapters",
    "lhpc.adapters.cli",
    "lhpc.adapters.web",
]

[tool.setuptools.package-data]
"lhpc" = ["data/*.toml", "data/bases/*", "data/scripts/*"]
"lhpc.adapters.web" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# An unhandled exception in a test's thread is a HARD failure, never a swallowed warning (a leaked/racy
# test thread must be fixed, not tolerated). Complements the session-wide propagator in tests/conftest.py.
filterwarnings = ["error::pytest.PytestUnhandledThreadExceptionWarning"]

[tool.ruff.lint.per-file-ignores]
# These modules place a few imports AFTER module-level setup ON PURPOSE — load-order that avoids an
# import cycle (services.py aggregates the service_* mixins; status.py imports probes after its
# NOT_APPLICABLE sentinel). This is deliberate architecture, not style debt: moving them to the top
# risks a circular import at load time. Everything else in lhpc/ stays clean under default rules.
"lhpc/core/services.py" = ["E402"]
"lhpc/core/status.py" = ["E402"]
